// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date Snapshots renders a condensed date 1`] = `
.c0 {
  margin: 5px 20px 0 0;
  white-space: nowrap;
}

<div
  className="c0"
>
  <div
    className="sc-bZQynM bOrPFB sc-EHOje cmXNlL"
    fontFamily={
      Object {
        "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
        "fontWeight": 500,
      }
    }
    fontSize="12px"
  >
    May 19, 2017
  </div>
</div>
`;

exports[`Date Snapshots renders a date 1`] = `
.c0 {
  margin: 5px 20px 0 0;
  white-space: nowrap;
}

<div
  className="c0"
>
  <div
    className="sc-bZQynM bOrPFB sc-EHOje fXsUty"
    fontFamily={
      Object {
        "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
        "fontWeight": 500,
      }
    }
    fontSize="14px"
  >
    May 19, 2017 9:09 am
  </div>
</div>
`;
